--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "font-awesome-icons": "^1.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
